--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -8,13 +8,14 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      image: bitnami/postgresql
-      ports:
-        - 5432:5432
-      env:
-        POSTGRESQL_USERNAME: docker
-        POSTGRESQL_PASSWORD: docker
-        POSTGRESQL_DATABASE: apisolid
+      postgres:
+        image: bitnami/postgresql
+        ports:
+          - 5432:5432
+        env:
+          POSTGRESQL_USERNAME: docker
+          POSTGRESQL_PASSWORD: docker
+          POSTGRESQL_DATABASE: apisolid
     
     steps:
       - uses: actions/checkout@v3
