--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -28,6 +28,6 @@ jobs:
       - run: npm ci
 
       - run: npm run test:e2e
-        -env:
+        env:
           JWT_SECRET: test
           DATABASE_URL: "postgresql://docker:docker@localhost:5432/apisolid?schema=public"
